# zhishu

./: .gitignore  README.md  add_ppt_fade_transitions.py  build_zhishu_closed_loop_docx.py  build_zhishu_demo_presentation.mjs  build_zhishu_er_presentation_pdf.py  ppt_content.json  全局JSON-Schema规范.md  开发计划.md  知枢_企业知识资产管理与智能检索平台_闭环落地版_修订稿.docx
artifacts/: build_resume_fixed.py  preview_pdf.html  qdrant-demo-points.json  resume_dengke_optimized.docx  resume_source.docx
backend/: .env.example  Cargo.toml
backend/data/: demo-store.json
backend/data/object-storage/zhishu-documents/documents/: a1d28a25-bd2c-475d-86b0-597186527d29-.txt  abbbd4b2-cad1-4320-84df-6f9ec4227c5c-uploaded-file.txt
backend/migrations/: 001_init.sql
backend/src/: app.rs  config.rs  llm.rs  main.rs  models.rs  object_storage.rs  redis_cache.rs  security.rs
backend/src/routes/: agent_runs.rs  auth.rs  behaviors.rs  categories.rs  dashboard.rs  documents.rs  faq.rs  health.rs  mod.rs  qa.rs  tags.rs  users.rs
backend/src/store/: memory.rs  mod.rs  mysql.rs
docs/: ACCEPTANCE_CHECKLIST.md  DEPLOYMENT_RUNBOOK.md  IMPLEMENTATION_STATUS.md  api.http
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo
frontend/src/: App.tsx  api.ts  styles.css  types.ts
infra/: .env.example  docker-compose.yml
infra/scripts/: check-object-storage-mirror.ps1  check-prerequisites.ps1  check-route-b-prerequisites.ps1  export-qdrant-demo-points.ps1  run-full-acceptance.ps1  run-mysql-acceptance.ps1  (+8 more)
outputs/: 知枢_数据库系统课程演示汇报.pptx  知枢_数据库系统课程演示汇报.pptx.inspect.ndjson
